# trimul-openevolve

./: README.md  _baseline_loop.sh  eval_modal_trimul.py  eval_modal_trimul_kernel.py  pyproject.toml  results.json  run_agent.sh  run_until_baseline.sh
trimul_kernel/: openevolve_config.yaml  openevolve_evaluator.py  plot_run.py  program.md  results.json  run_eval.py  submission.py
trimul_kernel/openevolve_runs/run1/best/: best_program_info.json
trimul_kernel/openevolve_runs/run1/checkpoints/checkpoint_10/: best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run1/checkpoints/checkpoint_15/: best_program.py  best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run1/checkpoints/checkpoint_20/: best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run1/checkpoints/checkpoint_25/: best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run1/checkpoints/checkpoint_5/: best_program.py  best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run2/best/: best_program_info.json
trimul_kernel/openevolve_runs/run2/checkpoints/checkpoint_10/: best_program.py  best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run2/checkpoints/checkpoint_15/: best_program_info.json  metadata.json
trimul_kernel/openevolve_runs/run2/checkpoints/checkpoint_20/: best_program_info.json  metadata.json
trimul_kernel/runs/20260609_012449_trimul_starting_point/: experiment_history.md  results.tsv
trimul_kernel/runs/20260609_012449_trimul_starting_point/conversation_history/: conversation.md
(+84 files in other folders)
